# limit_trainer

./: CMakeLists.txt  README.md  formulawidget.cpp  formulawidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  practiceaftertheorywindow.cpp  practiceaftertheorywindow.h  practiceaftertheorywindow.ui  practicemanager.cpp  practicemanager.h  practiceselectdialog.cpp  practiceselectdialog.h  practiceselectdialog.ui  practicesessionwindow.cpp  practicesessionwindow.h  practicesessionwindow.ui  progressmanager.cpp  progressmanager.h  res.qrc  theorycontentmanager.cpp  theorycontentwindow.cpp  theorycontentwindow.h  theorycontentwindow.ui  theorywindow.cpp  theorywindow.h  theorywindow.ui  topiccontentmanager.cpp  topiccontentmanager.h  topiclearningmanager.cpp  topiclearningmanager.h  topicmanager.cpp  topicmanager.h  variantbuilderdialog.cpp  variantbuilderdialog.h  variantbuilderdialog.ui  variantsessionwindow.cpp  variantsessionwindow.h  (+1 more)
data/: practice.json  theory.json  theory_old.json  topics.json
